Small layout issues

--- a/avrremote/static-new/css/milligram-responsive.css
+++ b/avrremote/static-new/css/milligram-responsive.css
@@ -4,3 +4,12 @@
 		max-width: 100%;
 	}
 }
+
+.row.row-no-spacing {
+	margin-left: 0;
+	width: 100%;
+}
+
+.row.row-no-spacing .column {
+	padding: 0;
+}
